[package]
name = "extra-rust-wasm"
version = "0.1.0"
authors = ["Julien de Charentenay <julien@charentenay.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = { version = "1" }
nalgebra = { version = "0", features = [ "serde-serialize" ] }
wasm-bindgen = { version = "0", optional = true }
derive_builder = "0"
js-sys = "0"
enum_dispatch = { version = "0" }
thiserror = { version = "1" }
nanoid    = { version = "0" }

[dependencies.web-sys]
version = "0"
# optional = true
features = [
  'console',
  'MouseEvent',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WheelEvent',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
]

[features]
wasm = [ "wasm-bindgen" ] # , "web-sys" ]

